--- a/templates/station.html
+++ b/templates/station.html
@@ -16,20 +16,28 @@
 	<td>
 	  <div>
 	    <span>上行</span>
+	    {% if 線路.get('上行') %}
 	    <span>{{ 線路['上行']['終點站'] }} 方向</span>
 	    {% if 線路['上行']['次車距離'] >= 0 %}
 	    <span>{{ 線路['上行']['次車距離'] }} 站</span>
 	    {% else %}
 	    <span>尚未发车</span>
 	    {% endif %}
+	    {% else %}
+	    <span>不过站</span>
+	    {% endif %}
 	  </div>
 	  <div>
 	    <span>下行</span>
+	    {% if 線路.get('下行') %}
 	    <span>{{ 線路['下行']['終點站'] }} 方向</span>
 	    {% if 線路['下行']['次車距離'] >= 0 %}
 	    <span>{{ 線路['下行']['次車距離'] }} 站</span>
 	    {% else %}
 	    <span>尚未发车</span>
+	    {% endif %}
+	    {% else %}
+	    <span>不过站</span>
 	    {% endif %}
 	  </div>
 	</td>
