--- a/templates/station.html
+++ b/templates/station.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       body { display: flex; justify-content: center; }
-      body { background-color: hsla(0, 0%, 93%); }
-      .item { background-color: hsla(0, 0%, 99%); }
+      body { background-color: hsl(0, 0%, 93%); }
+      .item { background-color: hsl(0, 0%, 99%); }
       h1 { text-align: center; }
       .item { display: flex; }
       .right { flex-grow: 1; }
@@ -15,7 +15,7 @@
       .name { width: 3em; text-align: center; font-size: 1.2em; }
       .name { padding-right: 0.2em; }
       .name a { text-decoration: none; }
-      .d { color: hsla(0, 90%, 55%); font-size: 1.2em; }
+      .d { color: hsl(0, 90%, 55%); font-size: 1.2em; }
       .d.pass { color: gray; font-size: 1.1em; }
       .d { display: inline-block; margin-left: 0.1em; }
       .t { font-weight: bold; font-size: 1.1em; }
