--- a/templates/search.html
+++ b/templates/search.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       body { display: flex; flex-direction: column; justify-content: center; }
-      body { background-color: hsla(0, 0%, 93%); }
+      body { background-color: hsl(0, 0%, 93%); }      
+      @media only screen and (max-width: 1000px) {
+          body { background-color: hsl(0, 0%, 99%); }
+      }
       h1 { text-align: center; }
       a { text-decoration: none; }
       #container { align-self: center; }
-      #container { background-color: hsla(0, 0%, 99%); }
+      #container { background-color: hsl(0, 0%, 99%); }
       #container { min-height: 80vh; padding: 0.5em 1em; }
       #container { border-radius: 0.3em; }
       #container { display: flex; flex-direction: column; align-items: center; }
@@ -29,7 +32,7 @@
       color: hsl(0, 0%, 29%);
       border: 1px solid hsl(0, 0%, 79%);
       border-radius: 3px;
-      box-shadow: 0 1px 2px hsla(0, 0%, 39%, 0.3);
+      box-shadow: 0 1px 2px hsl(0, 0%, 39%, 0.3);
       }
     </style>
   </head>
@@ -48,7 +51,8 @@
       {% for 線路 in 搜尋結果['線路'] %}
       <tr class="item_tr">
 	<td class="item">
-	  <a href="{{ url_for('查詢線路', routeId=線路['編號']) }}">
+	  <a href="{{ url_for('查詢線路', routeId=線路['編號']) }}"
+	     target="_blank">
 	    {{ 線路['名稱'] }}
 	  </a>
 	</td>
@@ -63,7 +67,8 @@
       {% for 車站 in 搜尋結果['車站'] %}
       <tr class="item_tr">
 	<td class="item">
-	  <a href="{{ url_for('查詢車站', stationNameId=車站['編號']) }}">
+	  <a href="{{ url_for('查詢車站', stationNameId=車站['編號']) }}"
+	     target="_blank">
 	    {{ 車站['名稱'] }}
 	  </a>
 	</td>
