--- a/templates/busy.html
+++ b/templates/busy.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>400 Bad Request</title>
   </head>
   <body>
     <h1>400 Bad Request</h1>
-    <p>请求过于频繁，请稍候再试</p>
+    <p>系统繁忙，请稍候再试</p>
   </body>
 </html>
