--- a/templates/route.html
+++ b/templates/route.html
@@ -32,6 +32,7 @@
       .departure { font-family: monospace; }
       .time_range.right { display: flex; flex-direction: row-reverse; }
     </style>
+    <title>{{ 資訊['線路名稱'] }} - 实时公交</title>
   </head>
   <body>
     <div id="container">
