--- a/templates/search.html
+++ b/templates/search.html
@@ -36,6 +36,7 @@
       box-shadow: 0 1px 2px hsl(0, 0%, 39%, 0.3);
       }
     </style>
+    <title>广州实时公交</title>
   </head>
   <body>
     <div id="container">
