--- a/templates/station.html
+++ b/templates/station.html
@@ -20,6 +20,7 @@
       .d { display: inline-block; margin-left: 0.1em; }
       .t { font-weight: bold; font-size: 1.1em; }
     </style>
+    <title>{{ 車站名稱 }} - 实时公交</title>
   </head>
   <body>
     <div id="container">
