--- a/templates/route.html
+++ b/templates/route.html
@@ -9,7 +9,7 @@
       h1 { text-align: center; }
       a { text-decoration: none; }
       .item {
-          background-color: hsla(0, 0%, 99%);
+          background-color: hsl(0, 0%, 99%);
           border-radius: 0.4em;
           padding: 0.7em 1.2em;
       }
