--- a/templates/search.html
+++ b/templates/search.html
@@ -55,7 +55,7 @@
 		      var a = document.createElement('a');
 		      tr.classList.add('item_tr');
 		      td.classList.add('item');
-		      a.href = '/station/' + list[i]['車站編號'];
+		      a.href = 'station/' + list[i]['車站編號'];
 		      a.target = '_blank';
 		      a.textContent = list[i]['車站名稱'];
 		      td.appendChild(a);
