--- a/android/CantonBus/res/layout/route.xml
+++ b/android/CantonBus/res/layout/route.xml
@@ -3,19 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-   <LinearLayout
+    
+    <LinearLayout
         android:id="@+id/loading"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
         android:orientation="vertical">
-
-        <ProgressBar
+        <TextView
             android:id="@+id/progress"
-            style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </ProgressBar>
+            android:layout_height="wrap_content"
+        />
     </LinearLayout>
     
     <LinearLayout
@@ -25,7 +24,6 @@
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone">
-        
         <Button
             android:id="@+id/retry_btn"
             android:layout_width="wrap_content"
@@ -34,11 +32,27 @@
         />
     </LinearLayout>
     
-    <ListView
-        android:id="@+id/distance_list"
+    <LinearLayout
+        android:id="@+id/result"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:gravity="center"
+        android:orientation="vertical"
         android:visibility="gone">
-    </ListView>
-    
+    	<TextView
+        	android:id="@+id/top"
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+    	/>
+		<ListView
+	    	android:id="@+id/route_map"
+	    	android:layout_width="fill_parent"
+	   	 android:layout_height="fill_parent">
+		</ListView>
+    	<TextView
+        	android:id="@+id/bottom"
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+    	/>
+    </LinearLayout>
 </LinearLayout>
