--- a/android/CantonBus/res/layout/main.xml
+++ b/android/CantonBus/res/layout/main.xml
@@ -21,6 +21,15 @@
     android:textAllCaps="false"
     android:id="@+id/btn"
     />
+<Button
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:textSize="25sp"
+    android:text="查看收藏夹"
+    android:textAllCaps="false"
+    android:id="@+id/bookmark_btn"
+    />
 <!--<ScrollView
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
