--- a/android/CantonBus/res/menu/top_right_single.xml
+++ b/android/CantonBus/res/menu/top_right_single.xml
@@ -4,7 +4,7 @@
     
     <item
         android:id="@+id/reload"
-        android:title="Reload"
+        android:title="刷新"
 		android:orderInCategory="0"
 	/>
 </menu>
