--- a/android/CantonBus/res/layout/bookmark_item.xml
+++ b/android/CantonBus/res/layout/bookmark_item.xml
@@ -2,7 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="horizontal"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp" >
+    
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="64dp"
+        android:layout_height="fill_parent"
+        android:scaleType="fitCenter" />
     
 	<TextView
 	    android:id="@+id/name"
