--- a/android/CantonBus/res/layout/distance_item.xml
+++ b/android/CantonBus/res/layout/distance_item.xml
@@ -2,28 +2,91 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingLeft="4dp"
+    android:paddingRight="4dp"
+    android:paddingTop="7dp"
+    android:paddingBottom="7dp" >
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="85dp"
         android:layout_height="fill_parent"
-        android:textSize="25sp"
+        android:textSize="23sp"
+        android:textColor="#3333FE"
+        android:gravity="center"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp" 
     />
 	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
-	    android:orientation="vertical">
-		<TextView
-        	android:id="@+id/up"
-        	android:layout_width="fill_parent"
-        	android:layout_height="wrap_content"
-        	android:textSize="15sp"
+	    android:orientation="vertical"
+	    android:gravity="center">
+	    <LinearLayout
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal">
+	    	<TextView
+        		android:id="@+id/up_t"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:textSize="16sp"
+        		android:textColor="#4F4F4F"
     		/>
-	    <TextView
-        	android:id="@+id/down"
-        	android:layout_width="fill_parent"
-        	android:layout_height="wrap_content"
-        	android:textSize="15sp"
-    	/>
+	    	<TextView
+        		android:id="@+id/up_n"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:textSize="16sp"
+        		android:textStyle="bold"
+    		/>
+	    	<TextView 
+	    	    android:id="@+id/up_l"
+	        	android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:textSize="13sp"
+        		android:paddingLeft="4dp"
+        		android:paddingRight="4dp" />
+			<TextView
+        		android:id="@+id/up_d"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:textSize="16sp"
+        		android:textColor="#FE3333"
+    		/>
+		</LinearLayout>
+		<LinearLayout
+	    	android:layout_width="fill_parent"
+	    	android:layout_height="wrap_content"
+	    	android:orientation="horizontal">
+			<TextView
+        		android:id="@+id/down_t"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:textSize="16sp"
+        		android:textColor="#4F4F4F"
+    		/>
+			<TextView
+        		android:id="@+id/down_n"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:textSize="16sp"
+        		android:textStyle="bold"
+    		/>
+	    	<TextView 
+	    	    android:id="@+id/down_l"
+	        	android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:textSize="13sp"
+        		android:paddingLeft="4dp"
+        		android:paddingRight="4dp" />
+			<TextView
+        		android:id="@+id/down_d"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:textSize="16sp"
+        		android:textColor="#FE3333"
+    		/>
+		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
