--- a/android/CantonBus/res/layout/result_item.xml
+++ b/android/CantonBus/res/layout/result_item.xml
@@ -2,16 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="horizontal"
+    android:paddingTop="6dp"
+    android:paddingBottom="6dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp" >
+    <ImageView 
+        android:id="@+id/icon"
+        android:layout_width="64dp"
+        android:layout_height="fill_parent"
+        android:scaleType="fitCenter"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center" >
     <TextView
         android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:textSize="20sp"
     />
     <TextView
         android:id="@+id/detail"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textColor="#3F3F3F"
     />
+    </LinearLayout>
 </LinearLayout>
