--- a/android/CantonBus/res/layout/route_map_item.xml
+++ b/android/CantonBus/res/layout/route_map_item.xml
@@ -2,31 +2,77 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp" >
     
     <TextView
+        android:layout_weight="0"
         android:id="@+id/up_bus"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:gravity="left"
+        android:textSize="13sp"
+        android:textColor="#DE9424"
     />
     <TextView
+        android:layout_weight="0"
         android:id="@+id/up_sub"
+        android:layout_width="25dp"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="#22BB22"
+        android:gravity="center"
+    />
+    <LinearLayout 
+        android:layout_weight="1"
+        android:layout_width="fill_parent"
+    	android:layout_height="wrap_content"
+    	android:gravity="center"
+        android:orientation="horizontal">
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-    />
+        android:gravity="center"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/station"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="#4444FE"
+        android:gravity="center"
     />
     <TextView
+        android:id="@+id/hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:textColor="#4444FE"
+        android:gravity="center"
+    />
+    </LinearLayout>
+    </LinearLayout>
+    <TextView
+        android:layout_weight="0"
         android:id="@+id/down_sub"
-        android:layout_width="wrap_content"
+        android:layout_width="25dp"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="#22BB22"
+        android:gravity="center"
     />
     <TextView
+        android:layout_weight="0"
         android:id="@+id/down_bus"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:gravity="right"
+        android:textSize="13sp"
+        android:textColor="#DE9424"
     />
 </LinearLayout>
