--- a/android/CantonBus/res/menu/top_right.xml
+++ b/android/CantonBus/res/menu/top_right.xml
@@ -4,11 +4,13 @@
     <item
         android:id="@+id/reload"
         android:title="刷新"
+        android:icon="@drawable/refresh"
 		android:orderInCategory="0"
 	/>
     <item
         android:id="@+id/add_bookmark"
         android:title="收藏"
+        android:icon="@drawable/star"
 		android:orderInCategory="0"
 	/>
 </menu>
