--- a/android/CantonBus/res/menu/top_right_single.xml
+++ b/android/CantonBus/res/menu/top_right_single.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/reload"
         android:title="刷新"
+        android:icon="@drawable/refresh"
 		android:orderInCategory="0"
 	/>
 </menu>
